--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 aniso8601==9.0.1
-attrs==21.2.0
-click==8.0.3
-Flask==2.0.2
-flask-restx==0.5.1
-importlib-metadata==4.8.1
-itsdangerous==2.0.1
-Jinja2==3.0.2
-jsonschema==4.1.2
+attrs==22.2.0
+click==8.1.3
+Flask==2.2.2
+flask-restx==1.0.5
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.17.3
 MarkupSafe==2.0.1
 pyrsistent==0.18.0
 pytz==2021.3
@@ -15,3 +15,4 @@ typing-extensions==3.10.0.2
 Werkzeug==2.0.2
 zipp==3.6.0
 SQLAlchemy~=1.4.26
+marshmallow~=3.19.0
